src/objects/CRMfusionDBR101__AutoConvert_Setting__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Contact_Owner__c</fullName>
        <inlineHelpText>Owner of the contact that is created during an automatic lead conversion if the conversion is triggered by a Lead to Account scenario.</inlineHelpText>
        <label>Created Contact Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Account Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Owner</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Conversion_Priority__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>This field specifies the order in which multiple auto-convert scenarios are acted upon.  The lower the number, the higher the priority.  Lead to Contact  auto-convert scenarios always execute before Lead to Account auto-convert scenarios.</inlineHelpText>
        <label>Conversion Priority</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Conversion_Target__c</fullName>
        <inlineHelpText>This option controls which duplicate record is selected as the master for an automatic conversion.</inlineHelpText>
        <label>Conversion Target</label>
        <picklist>
            <picklistValues>
                <fullName>Oldest Record</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Newest Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Updated Record</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Converted_Status__c</fullName>
        <inlineHelpText>The status to assign to the lead during the automatic conversion.  The status must be a converted status.</inlineHelpText>
        <label>Converted Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Create a new opportunity when a lead is automatically converted.</inlineHelpText>
        <label>Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Create_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checking this option will create a task containing the data from the converted lead when an automatic conversion is made.</inlineHelpText>
        <label>Save as Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Default_Include_in_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not all fields should be included in the task created from the conversion containing data from the original lead by default. This value can be over-ridden by individual field settings below.</inlineHelpText>
        <label>Default Include in Task Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Key__c</fullName>
        <description>Internal key for upserting.  This is just the scenario Id.</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Opportunity_Close_Date__c</fullName>
        <inlineHelpText>Opportunity close date to use when creating an opportunity during an automatic lead conversion.</inlineHelpText>
        <label>Opportunity Close Date</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Month</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Opportunity_Name__c</fullName>
        <inlineHelpText>Default opportunity name for opportunities created during an automatic lead conversion.</inlineHelpText>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Opportunity_Owner__c</fullName>
        <inlineHelpText>Owner of the opportunity that is created during an automatic lead conversion if opportunity creation is selected.</inlineHelpText>
        <label>Opportunity Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Account Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Owner</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Opportunity_Stage__c</fullName>
        <inlineHelpText>Opportunity stage to use when creating an opportunity during an automatic lead conversion.</inlineHelpText>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipLabel>DupeBlocker Auto-Convert Settings</relationshipLabel>
        <relationshipName>AutoConvert_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Send_Notification_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Send a notification email to the opportunity owner when the opportunity is created during the auto-conversion process.</inlineHelpText>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Server_URL__c</fullName>
        <formula>LEFT( $Api.Enterprise_Server_URL_290 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_290, 9) )</formula>
        <label>Server URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Due_Date__c</fullName>
        <inlineHelpText>The due date that should be used when creating a task from the converted lead during an automatic conversion.</inlineHelpText>
        <label>Task Due Date</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Owner__c</fullName>
        <inlineHelpText>The owner of the task that is created when a lead is converted automatically.</inlineHelpText>
        <label>Task Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Account Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Owner</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Status__c</fullName>
        <inlineHelpText>The status to assign to the task.</inlineHelpText>
        <label>Task Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Subject__c</fullName>
        <defaultValue>&apos;DupeBlocker Auto-Convert - Original Lead Data&apos;</defaultValue>
        <inlineHelpText>The subject that should be used when creating the task for the converted lead during an automatic conversion.</inlineHelpText>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Auto-Convert Setting</label>
    <nameField>
        <displayFormat>Setting: {0}</displayFormat>
        <label>DupeBlocker Auto-Convert Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Auto-Convert Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRMfusionDBR101__Contact_Owner_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT( CRMfusionDBR101__Scenario__r.CRMfusionDBR101__Scenario_Type__c ) = &apos;Lead to Account&apos;, OR( ISNULL( TEXT( CRMfusionDBR101__Contact_Owner__c ) ), TEXT( CRMfusionDBR101__Contact_Owner__c ) = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Contact_Owner__c</errorDisplayField>
        <errorMessage>The Contact Owner must be set for Lead to Account Auto-Convert scenarios.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Conversion_Target_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( TEXT( CRMfusionDBR101__Conversion_Target__c ) ), TEXT( CRMfusionDBR101__Conversion_Target__c ) = &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Conversion_Target__c</errorDisplayField>
        <errorMessage>The Conversion Target must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Opportunity_Close_Date_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Opportunity__c, OR( ISNULL( TEXT( CRMfusionDBR101__Opportunity_Close_Date__c ) ), TEXT( CRMfusionDBR101__Opportunity_Close_Date__c ) = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Opportunity_Close_Date__c</errorDisplayField>
        <errorMessage>The Opportunity Close Date cannot be null if Create Opportunity is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Opportunity_Name_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Opportunity__c, OR( ISNULL( CRMfusionDBR101__Opportunity_Name__c ), CRMfusionDBR101__Opportunity_Name__c = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Opportunity_Name__c</errorDisplayField>
        <errorMessage>The Opportunity Name must be set if Create Opportunity is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Opportunity_Stage_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Opportunity__c, OR( ISNULL( CRMfusionDBR101__Opportunity_Stage__c ), CRMfusionDBR101__Opportunity_Stage__c = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Opportunity_Stage__c</errorDisplayField>
        <errorMessage>The Opportunity Stage must be set if Create Opportunity is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Task_Due_Date_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Task__c, OR( ISNULL( TEXT( CRMfusionDBR101__Task_Due_Date__c ) ), TEXT(CRMfusionDBR101__Task_Due_Date__c ) = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Task_Due_Date__c</errorDisplayField>
        <errorMessage>If the Save as Task option is selected, you must provide a task due date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Task_Owner_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Task__c, OR( ISNULL( TEXT( CRMfusionDBR101__Task_Owner__c ) ), TEXT(CRMfusionDBR101__Task_Owner__c ) = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Task_Owner__c</errorDisplayField>
        <errorMessage>If the Save as Task option is selected, you must select a Task Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Task_Subject_Check_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Task__c, OR( ISNULL( CRMfusionDBR101__Task_Subject__c ), CRMfusionDBR101__Task_Subject__c = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Task_Subject__c</errorDisplayField>
        <errorMessage>If the Save as Task option is selected, a Task Subject must be provided.</errorMessage>
    </validationRules>
</CustomObject>